<resources>
    <string name="app_name">Test</string>
    <string name="in">请输入摄氏度</string>
    <string name="transfer">转换为华氏温度</string>
    <string name="out">转换后的值为：</string>
    <string name="TeamA">TeamA</string>
    <string name="add_3point">+3POINTS</string>
    <string name="add_2point">+2POINTS</string>
    <string name="add_1point">+1POINTS</string>
    <string name="score">0</string>
    <string name="reset">RESET</string>
    <string name="TeamB">TeamB</string>

    <string name="rmb_hint">INPUT RMB</string>
    <string name="showOut">Result</string>
    <string name="bDollar_label">Dollar</string>
    <string name="bEuro_label">Euro</string>
    <string name="bWon_label">Won</string>

    <string name="toScoreMachine">toScoreMachine</string>
    <string name="toBaidu">toBaidu</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="set_label">Setting</string>
    <string name="openList">OpenList</string>
    <string name="home_label">首页</string>
    <string name="func_label">功能</string>
    <string name="setting_label">设置</string>
</resources>
