<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameActivity"
    android:orientation="vertical">

    <fragment
        android:id="@+id/fragment_main"
        android:name="com.swufe.wy.test.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <fragment
        android:id="@+id/fragment_func"
        android:name="com.swufe.wy.test.FuncFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <fragment
        android:id="@+id/fragment_setting"
        android:name="com.swufe.wy.test.SettingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <RadioGroup
        android:id="@+id/bottomGroup"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHome"
            style="@style/rg_btn_style"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/home"
            android:text="@string/home_label" />

        <RadioButton
            android:id="@+id/radioFunc"
            style="@style/rg_btn_style"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/func"
            android:text="@string/func_label" />

        <RadioButton
            android:id="@+id/radioSetting"
            style="@style/rg_btn_style"
            android:drawableTop="@mipmap/setting2"
            android:text="@string/setting_label" />


    </RadioGroup>

</LinearLayout>